<resources>
    <string name="app_name">Voicebox</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="home_fragment_label">Home Fragment</string>
    <string name="profile_fragment_label">Profile Fragment</string>
    <string name="login_fragment_label">Login Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="action_start_collab">Start collab</string>
    <string name="action_add_artist">Add artist</string>
    <string name="open_profile_card">Open profile card</string>
    <string name="back_to_home">Back to home</string>
    <string name="profile">Profile</string>
    <string name="settings_button">Settings button</string>

    <string name="type_a_section">Type a section.</string>
    <string name="submit">Submit</string>
    <string name="collab_logo">Collab logo</string>
    <string name="new_user_register_now">New User? Register Now.</string>
    <string name="or">OR</string>
    <string name="forgot_password">FORGOT PASSWORD?</string>
    <string name="login">LOGIN</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="artist_name">Artist Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">REGISTER</string>
    <string name="already_have_an_account_login">Already have an account? Login.</string>
    <string name="register_fragment_label">Register Fragment</string>
    <string name="logout">Logout</string>
    <string name="about">About</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="artists">Artists</string>
    <string name="friends_fragment_label">FriendsFragment</string>
    <string name="search">Search</string>
    <string name="add_friend">Add Friend</string>
    <string name="search_friends">Search Friends</string>
    <string name="start_solo_session">Start solo session</string>
    <string name="username">Username</string>
    <string name="edit_profile_picture">Edit profile picture</string>
    <string name="edit_background">Edit background</string>
    <string name="add_artist">Add artist</string>
    <string name="editor_actions">Editor actions</string>
    <string name="reset">Reset</string>
    <string name="download">Download</string>
    <string name="action_info">Info</string>
</resources>
