<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/app_nav_graph"
    app:startDestination="@id/HomeFragment">

    <fragment
        android:id="@+id/HomeFragment"
        android:name="com.sachinreddy.feature.fragment.HomeFragment"
        android:label="@string/home_fragment_label"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_profileFragment"
            app:destination="@id/ProfileFragment"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_homeFragment_to_friendsFragment"
            app:destination="@id/FriendsFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left" />
    </fragment>

    <fragment
        android:id="@+id/ProfileFragment"
        android:name="com.sachinreddy.feature.fragment.ProfileFragment"
        android:label="@string/profile_fragment_label"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_ProfileFragment_to_HomeFragment"
            app:destination="@id/HomeFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left" />
    </fragment>

    <fragment
        android:id="@+id/FriendsFragment"
        android:name="com.sachinreddy.feature.fragment.ArtistsFragment"
        android:label="@string/friends_fragment_label"
        tools:layout="@layout/fragment_artists">
        <action
            android:id="@+id/action_FriendsFragment_to_HomeFragment"
            app:destination="@id/HomeFragment"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right" />
    </fragment>
</navigation>
